# OFrunner

./: CMakeLists.txt  cmakeBuild
Dataset/: bunny.obj.TLH  crest-openbox.obj.TLH  disk.obj old different length meaning.TLH  disk.obj.TLH  disk.obj.TLH1  foamdisk.obj.TLH  foamsemisphere.obj.TLH  leaflike.obj (copy).TLH  leaflike.obj.TLH  openbox.obj 11.21 new rotation order.TLH  openbox.obj 2000iter  openbox.obj-monday morning with some error points.TLH  openbox.obj.TLH  openbox.obj1119.TLH  openbox_thick.obj first.TLH  openbox_thick.obj second (copy).TLH  openbox_thick.obj second.TLH  realbox.obj (copy).TLH  realbox.obj.TLH  semisphereshell.obj.TLH  small range errordetection at noon openbox.obj.TLH  sphere_refine.obj.TLH  thinbox.obj.TLH
Dataset/ModelsData/: *error*openbox.obj.csv  bunny.obj.txt  openbox.obj.txt  semisphereshell.obj.txt  symmetry_leaflike.obj.csv
Dataset/ModelsData/disk/: Aug.csv  disk.obj.csv
Dataset/ModelsData/foamdisk/: Aug.csv  foamdisk.obj.csv  foamdisk.txt
Dataset/old/: cube.obj.TLH  cube_refine.obj in10.25 perhaps the normal is wrong.TLH  cuberefine_new.TLH  disk.obj (copy).TLH  leaflike.obj.TLH  openbox.obj.TLH
Models/Quantities/: bunny.obj.qu  cube.obj.qu  cube_refine.obj.qu  disk.obj.qu  sphere_refine.obj.qu
OFtemplate/: GenerateMesh  RunCFD
OFtemplate/0/: U  k  nuTilda  nut  omega  p
OFtemplate/system/: blockMeshDict  controlDict  decomposeParDict  forceCoeffs  forces  fvSchemes  fvSolution  snappyHexMeshDict  surfaceFeaturesDict
Sources/: main.cpp
Sources/Input/: global_variables.h  load_config.cpp
Sources/OfGenerator/: adjust_template.cpp  of_input_generator.cpp  of_processor.h
Sources/OfInterpolator/: OneModelSphere.cpp  dataset_preprocess.cpp  mathfuncs.cpp  of_interpolate_model.cpp  of_interpolator.h  voxel_obj.cpp
Sources/QuickSolver/: model_preprocess.cpp  motion_computation.cpp  motion_visualization.cpp  quick_solver.h
Sources/Viewer/: NormalMap.fragmentshader  NormalMap.vertexshader  StandardShading.fragmentshader  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  Viewer.cpp  Viewer.h  controls.cpp  controls.hpp
(+18 files in other folders)
